Update index.html adscence code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="google-adsense-account" content="ca-pub-2058990642911808">
   <meta name="google-site-verification" content="Msc2sg8AD_q4y1fdIzEZSX6iu_tpCd7s-sEkLGKBCJ4" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
