--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta name="google-adsense-account" content="ca-pub-2058990642911808">
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2058990642911808"
+     crossorigin="anonymous"></script>
   <meta name="google-site-verification" content="Msc2sg8AD_q4y1fdIzEZSX6iu_tpCd7s-sEkLGKBCJ4" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
